@@ -30,7 +30,7 @@ a.crumb:nth-of-type(1)	{padding-left:5px;}
 
 .footwrap				{width:100%; min-width:1040px; height:40px; background-color:rgba(0,0,0,0.8);}
 .footcon				{width:960px; margin:0 auto; padding:10px 0;}
-.team					{width:480px; display:inline-block; vertical-align:top;}
+.team					{width:320px; display:inline-block; vertical-align:top;}
 .team a					{font-size:13px; line-height:1.5em; color:#A3A3A3;}
 .team a:focus			{color:#A3A3A3;}
 .team a:link  			{color:#A3A3A3;}
@@ -38,6 +38,7 @@ a.crumb:nth-of-type(1)	{padding-left:5px;}
 .team a:hover			{color:#fff;}
 .team a:active			{color:#A3A3A3;}
 .team.git				{text-align:right;}
+.team.top				{text-align:center;}
 
 a.datainvest			{display:block; width:100%; margin:0 auto; padding:10px 0; line-height:1.5em; font-size:14px; color:#D6D2A1; text-align:center; background-color:rgba(194, 0, 255, 0.4);}
 a.datainvest:hover		{color:#fff; background-color:rgba(194, 0, 255, 0.8);}
