@@ -20,7 +20,9 @@ Here is some SEO bait for you to read Mr crawler.
 	<div class="footcon">
 		<div class="team"><a href="http://www.aidtransparency.net/" title="International Aid Transparency Initiative (IATI)">
 			A project by the Country Tracker team :}</a>
-		</div><div class="team git"><a href="https://github.com/IATI/IATI-Country-Tracker" title="IATI Country Tracker on Github">
+		</div><div class="team top"><a onclick="$('html,body').animate({scrollTop:0},'slow');return false;">
+			Back to Top</a>
+		</div><div class="team git"><a href="https://github.com/IATI/IATI-Country-Tracker">
 			Fork us on Github!</a>
 		</div>
 	</div>
