@@ -5,6 +5,8 @@ Declaration added to XML SAVi
 Added declarations to table headers where needed
 Changed tooltip hover states to reflect data displayed
 Tightened up whitespace for whole site
+Added scrollTop in footer
+Added icon for declarations
 
 
 Country Tracker (2014-03-10 shi)
